fixed map height on small screens

--- a/public/styles/contact.css
+++ b/public/styles/contact.css
@@ -229,7 +229,7 @@ p {
 
     #map-div {
         width: 100%;
-        height: 45em;
+        height: 20em;
         padding-top: 5em;
         margin: auto;
     }
@@ -279,7 +279,7 @@ p {
 
     #map-div {
         width: 100%;
-        height: 45em;
+        height: 20em;
         padding-top: 5em;
         margin: auto;
     }
